public/styles.css
/* styles.css */

body {
    font-family: "Roboto Condensed", Arial, sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    background: var(--background-color);
    color: var(--text-color);
    transition: background 0.3s, color 0.3s;
    position: relative; /* Allow for absolute positioning of footer */
    padding-bottom: 60px; /* Make space for the footer */
}

:root {
    --background-color: #f4f4f9;
    --text-color: #333;
    --header-background: #4a90e2;
    --header-text-color: white;
    --footer-background: #4a90e2;
    --footer-text-color: white;
    --button-background: #4a90e2;
    --button-background-nav: #4782c7;
    --button-text-color: white;
    --section-background: #ddd;
    --section-color: #4a90e2;

    --description-background: #e3f2fd; /* Light blue */
    --description-text-color: #333; /* Dark text */
    --description-border-color: #4a90e2; /* Same as header background */
}

body.dark-theme {
    --background-color: #2d2d2d;
    --text-color: #ccc;
    --header-background: #1a1a1a;
    --header-text-color: #ccc;
    --footer-background: #1a1a1a;
    --footer-text-color: #ccc;
    --button-background: #333;
    --button-background-nav: #333;
    --button-text-color: #ccc;
    --section-background: #555;
    --section-color: #1a1a1a;

    --description-background: #5a5a5a;
    --description-text-color: #ccc;
    --description-border-color: #333;
}

header {
    background: var(--header-background);
    color: var(--header-text-color);
    padding: 1em 0;
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 1000;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    transition: background 0.3s, color 0.3s;
}

header .container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 1em;
}

header h1 {
    margin: 0;
    font-size: 1.5em;
}

.nav-toggle {
    display: none;
    background: none;
    border: none;
    font-size: 2em;
    cursor: pointer;
}

.nav-list {
    list-style: none;
    display: flex;
    justify-content: center;
}

nav ul {
    list-style: none;
    display: flex;
    justify-content: center;
    padding: 0;
    margin: 0;
}

nav ul li {
    margin: 0 1em;
    align-content: center;
}

nav ul li a {
    color: var(--header-text-color);
    text-decoration: none;
    font-weight: bold;
    padding: 0.5em 1em;
    transition: background 0.3s, color 0.3s;
}

nav ul li a:hover {
    background: var(--header-text-color);
    color: var(--header-background);
    border-radius: 5px;
}

nav ul li button {
    background: var(--button-background-nav);
    color: var(--button-text-color);
    border: none;
    padding: 0.5em 1em;
    cursor: pointer;
    transition: background 0.3s, color 0.3s;
    font-size: 1em;
    border-radius: 5px;
    display: flex;
    align-items: center;
    gap: 0.5em;
}

nav ul li button:hover {
    background: var(--header-text-color);
    color: var(--header-background);
    border-radius: 5px;
}

#theme-icon {
    transition: transform 0.5s;
    display: inline-block;
}

section {
    padding: 4em 2em;
    text-align: center;
    margin-top: 100px;
}

h1, h2, h3 {
    font-weight: 300;
}

h1 {
    font-size: 3em;
    margin-bottom: 0.5em;
}

h2 {
    font-size: 2.5em;
    margin-bottom: 1em;
}

h3 {
    font-size: 2em;
    margin-bottom: 0.5em;
}

p {
    font-size: 1.1em;
    line-height: 1.6em;
    margin-bottom: 1.5em;
}

#home {
    display: flex;
    align-items: center top;
    justify-content: center;
    height: 100vh;
    width: 100%;
    background: var(--section-background);
    box-sizing: border-box;
    padding: 20px;
    background-size: cover;
}

.home {
    text-align: center;
}

#about {
    display: flex;
    align-items: center;
    justify-content: center;
    background: var(--section-background);
    box-sizing: border-box;
    padding: 20px;
    user-select: none;
}

.rounded-image {
    width: 200px;
    height: 200px;
    border-radius: 50%;
}

footer {
    background: var(--footer-background);
    color: var(--footer-text-color);
    text-align: center;
    padding: 1em 0;
    width: 100%;
    bottom: 0;
    transition: background 0.3s, color 0.3s;
}


.contact-link {
    color: var(--button-text-color);
    text-decoration: none;
}

.contact-link i {
    font-size: 2em;
}

.contact-link:hover {
    opacity: 0.7;
}

/* projects section */

#projects-section {
    background: var(--section-background);
    box-sizing: border-box;
    padding: 20px;
    user-select: none;
}

#projects-container{
    display: flex;
    align-items: flex-start;
    width: 100%;
    padding: 10px;
    justify-content: center;
}

.description-container {
    background: var(--description-background);
    color: var(--description-text-color);
    border: 2px solid var(--description-border-color);
    padding: 1em;
    margin-top: 1em;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.description-container h2 {
    text-align: center;
    color: var(--description-text-color);
}

#projects{
    width: 45%;
    padding: 20px;
}

#projects ul {
    list-style: none;
    padding: 0;
    margin: 0;
    text-align: left;
    width: 100%;
}

#projects ul li {
    margin-bottom: 10px;
}

#project-preview {
    width: 45%;
    padding: 20px;
    display: flex;
    align-items: center;
    justify-content: center;
}

#project-preview img {
    transition: opacity 0.5s ease;
    opacity: 0;
    width: 100%; 
    height: auto;
    object-fit: cover;
    border-radius: 10px;
}

#project-preview iframe {
    width: 90%;
    height: 90%;
    transition: opacity 0.5s ease;
    opacity: 0;
    border-radius: 10px;
}

.section-description-buttons {
    display: flex;
    align-items: center;
    justify-content: center;
    background: var(--section-background);
    box-sizing: border-box;
    padding: 20px;
    user-select: none;
    margin-bottom: 30px;
    gap: 20px;
}

.section-description-buttons button {
    background: var(--button-background);
    color: var(--button-text-color);
    border: none;
    cursor: pointer;
    transition: background 0.3s, color 0.3s;
    font-size: 1em;
    width: 200px;
    height: 50px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    border-radius: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0 20px;
}

.section-description-buttons button:hover {
    background: var(--header-text-color);
    color: var(--header-background);
    border-radius: 10px;
}

.section-description-buttons img{
    max-height: 100%;
    vertical-align: middle;
}

.section-description-buttons button:hover img[src$=".svg"] { 
    max-height: 100%;
    vertical-align: middle;
    filter: invert(100%); 
}

.section-description-buttons i {
    font-size: 1.5em;
}

.project-button {
    background: var(--button-background);
    color: var(--button-text-color);
    border: none;
    padding: 0.5em 1em;
    cursor: pointer;
    transition: background 0.3s, color 0.3s;
    font-size: 1em;
    width: 100%;
    height: 100px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    border-radius: 10px;
}

.project-button:hover {
    background: var(--header-text-color);
    color: var(--header-background);
    border-radius: 10px;
}

.project-link-button {
    background: var(--button-background);
    color: var(--button-text-color);
    border: 2px;
    padding: 0.75em 1.25em;
    cursor: pointer;
    transition: background 0.3s, color 0.3s, transform 0.3s;
    font-size: 1.1em;
    font-weight: bold;
    text-transform: uppercase;
    width: 100%;
    height: 100px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    border-radius: 12px;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
}

.project-link-button:hover {
    background: var(--header-text-color);
    color: var(--header-background);
    transform: scale(1.05);
}

.project-link-button:hover img[src$=".svg"] { 
    filter: invert(100%); 
}

.googleplay-link-button {
    display: inline-block;
    background: var(--link-button-background);
    color: var(--link-button-text-color);
    border: 2px solid var(--link-button-border-color);
    padding: 0.75em 1.25em;
    cursor: pointer;
    transition: background 0.3s, color 0.3s, transform 0.3s;
    font-size: 1.1em;
    font-weight: bold;
    text-transform: uppercase;
    max-width: 100%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    border-radius: 12px;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
}

.googleplay-link-button img {
    display: block;
    max-width: 100%;
    height: auto;
}

.googleplay-link-button:hover {
    background: var(--link-button-hover-background);
    color: var(--link-button-hover-text-color);
    transform: scale(1.05);
    border-radius: 12px;
}


/* Skills Section */

#skills {
    display: flex;
    align-items: center;
    justify-content: center;
    background: var(--section-background);
    box-sizing: border-box;
    padding: 20px;
    user-select: none;
    margin-bottom: 30px;
}

.skill-bar {
    width: 80%;
    margin: 0 auto;
}

.skill {
    margin: 1em 0;
    background: var(--section-background);
    border-radius: 5px;
    overflow: hidden;
    position: relative;
    height: 2em;
}

.skill .skill-name {
    position: absolute;
    left: 1em;
    top: 50%;
    transform: translateY(-50%);
    color: var(--text-color);
}

.skill .skill-percentage {
    display: block;
    height: 100%;
    background: var(--section-color);
    width: 0;
    transition: width 1s;
}

/* Responsive Design */
@media (max-width: 768px) {
    .nav-toggle {
        display: block;
        color: var(--header-text-color);
    }

    nav {
        display: none;
        position: absolute;
        top: 60px;
        right: 20px;
        background: var(--header-background);
        border-radius: 5px;
        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
        width: 200px;
    }

    .nav-list {
        flex-direction: column;
        align-items: flex-start;
        padding: 1em;
    }

    .nav-list li {
        margin: 0.5em 0;
        width: 100%;
    }

    .nav-list li a, .nav-list li button {
        width: 100%;
        text-align: left;
    }

    nav.show {
        display: block;
    }

    nav ul {
        flex-direction: column;
    }

    nav ul li {
        margin: 0.5em 0;
    }

    section {
        padding: 3em 1em;
    }

    #projects-section {
        background: var(--section-background);
        box-sizing: border-box;
        padding: 20px;
        user-select: none;
    }

    #projects-container{
        display: block;
        width: 100%;
        justify-content: center;
    }

    #projects{
        width: 90%;
    }

    #project-preview {
        width: 90%;
        padding: 20px;
    }
}

